fix comment alignment

--- a/views/assets/src/helpers/less/customization/common.less
+++ b/views/assets/src/helpers/less/customization/common.less
@@ -338,9 +338,9 @@ h3.no-projects {
     top: 7px;
     right: 5px;
 }
-#wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
-    margin-left: 44px;
-}
+// #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
+//     margin-left: 44px;
+// }
 #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .comment-content .comment-header {
     position: relative;
     justify-content: flex-start!important;
@@ -629,7 +629,7 @@ body.page .kbc-title-wrap .pm-checkbox input[type="checkbox"] + label:before {
 	margin-bottom: 0px !important;
 }
 
-.bp_group #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
+#wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
 	margin-left: 35px !important;
 }
 
