--- a/views/assets/src/helpers/less/customization/pm-overview.less
+++ b/views/assets/src/helpers/less/customization/pm-overview.less
@@ -1176,6 +1176,6 @@ div#pm-calender-page .project-select-area .form-content-wrap {
 	background:  var(--pm-secondary-button-background-regular) !important;
   }
 
-#wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
-	margin-left: 44px !important;
-}
+// #wedevs-project-manager #pm-single-task-wrap .pm-task-comment-wrap .pm-comment-content {
+// 	margin-left: 44px !important;
+// }
